--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
 
         <activity android:name=".history.HistoryActivity" />
         <activity android:name=".settings.SettingsActivity" />
+        <activity
+            android:name=".profile.ProfileActivity"
+            android:exported="true" />
 
 
     </application>
